openshift/service.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-app-service
  namespace: alyaabadr
spec:
  selector:
    app: spring-app
    
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080     
  type: NodePort
