openshift/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-app-route
spec:
  to:
    kind: Service
    name: spring-app-service
  port:
    targetPort: 8080
